--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.106+vyos1+helium10) unstable; urgency=low
+
+  [ Jason Hendry ]
+  * Bumping revision number for Mintel changes
+
+ -- Jason Hendry <jhendry@mintel.com>  Tue, 14 June 2016 15:48:00 +0100
+
 vyatta-cfg-vpn (0.12.105+vyos1+helium10) unstable; urgency=low
 
   [ Kim Hagen ]
