--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-vyatta-cfg-vpn (0.12.106+vyos1+helium10) unstable; urgency=low
+vyatta-cfg-vpn (0.12.105+vyos1+helium10+mintel2) unstable; urgency=low
+
+  [ Jason Hendry ]
+  * Fix versioning
+
+ -- Jason Hendry <jhendry@mintel.com>  Tue, 8 Nov 2016 15:01:00 +0100
+
+vyatta-cfg-vpn (0.12.105+vyos1+helium10+mintel1) unstable; urgency=low
 
   [ Jason Hendry ]
   * Bumping revision number for Mintel changes
